src/index.css
/*single page app css*/

body {
  background-color: #FFFFFF;
  padding: 0px;
  margin: 0;
}

h1, h2, p, ul, li {
  font-family: sans-serif;
}

/*when a navbar link in react-router is activated, it is assigned a
classname of 'active'*/

.content {
  background-color: #FFF;
  padding: 0px;
  margin:0px;
}

.content h2 {
  padding: 0;
  margin: 0;
}

.content li {
  margin-bottom: 10px;
}

.bg {
  width: 100vw;
  height: 100vh;
  position: relative;
  text-align: center;
  color: white;
}

.bg_img {
  position: absolute;
  object-fit: cover;
  width: 100%;
  height: 100%;
  display: block;
}

.centered {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.largeText {
  font-size: 60px;
  font-family: 'Dosis', sans-serif;
  font-weight: 600;
}

.mediumLargeText {
  font-size: 25px;
  font-family: 'Dosis', sans-serif;
  font-weight: 600;
}

.mediumText {
  font-size: 20px;
  font-family: 'Dosis', sans-serif;
  font-weight: 400;
}

.smallText {
  font-size: 15px;
  font-family: 'Dosis', sans-serif;
  font-weight: 400;
}

.darkText {
  color: #000000;
  font-family: 'Dosis', sans-serif;
}

.lightText {
  color: #FFFFFF;
  font-family: 'Dosis', sans-serif;
}

/*detects screen size for card columns*/
@media (min-width: 576px) {
    .my-card-width{
      width:66vw;
      margin:1vw;
    }
    .card-columns {
        column-count: 1;
    }
}

@media (min-width: 768px) {
    .my-card-width{
      width:30vw;
      margin:1vw;
    }
    .card-columns {
        column-count: 3;
    }
}

